@@ -162,17 +162,19 @@ public class StateUtil {
 			throw new HDIVException(HDIVErrorCodes.HDIV_PARAMETER_INCORRECT_VALUE);
 		}
 
-		String pageId;
+		String pId;
 		String sId;
 		try {
-			pageId = requestState.substring(0, firstSeparator);
+			pId = requestState.substring(0, firstSeparator);
 			sId = requestState.substring(firstSeparator + 1, lastSeparator);
 		} catch (StringIndexOutOfBoundsException e) {
 			throw new HDIVException(HDIVErrorCodes.HDIV_PARAMETER_INCORRECT_VALUE, e);
 		}
 
+		int pageId;
 		int stateId;
 		try {
+			pageId = Integer.parseInt(pId);
 			stateId = Integer.parseInt(sId);
 		} catch (NumberFormatException e) {
 			throw new HDIVException(HDIVErrorCodes.HDIV_PARAMETER_INCORRECT_VALUE, e);
@@ -200,7 +202,7 @@ public class StateUtil {
 	 *            current {@link IState} id
 	 * @return State with all the page data.
 	 */
-	protected IState getStateFromSession(String pageId, int stateId) {
+	protected IState getStateFromSession(int pageId, int stateId) {
 
 		IState sessionState = this.session.getState(pageId, stateId);
 
@@ -237,7 +239,7 @@ public class StateUtil {
 		String restoredStateHash = this.encodingUtil.calculateStateHash(value);
 
 		IState decodedState = (IState) encodingUtil.decode64(value);
-		String sessionStateHash = this.session.getStateHash(decodedState.getPageId() + "", decodedState.getId());
+		String sessionStateHash = this.session.getStateHash(decodedState.getPageId(), decodedState.getId());
 
 		if (restoredStateHash.equals(sessionStateHash)) {
 			return decodedState;
